--- a/ HomeWork_1/app/src/main/res/layout/acitivity_second.xml
+++ b/ HomeWork_1/app/src/main/res/layout/acitivity_second.xml
@@ -13,4 +13,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/second_button_start_service"
         />
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
