--- a/ HomeWork_1/app/src/main/res/layout/acitivity_second.xml
+++ b/ HomeWork_1/app/src/main/res/layout/acitivity_second.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <Button
         android:id="@+id/second_button_start_service"
         android:layout_width="wrap_content"
@@ -11,11 +12,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/second_button_start_service"
-        />
+        android:text="@string/second_button_start_service" />
+
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
