--- a/ HomeWork_1/app/src/main/res/layout/item_contact.xml
+++ b/ HomeWork_1/app/src/main/res/layout/item_contact.xml
@@ -6,5 +6,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:textColor="@color/black"
     android:textSize="18sp"
-    tools:text="@tools:sample/full_names"
-    />
+    tools:text="@tools:sample/full_names" />
