--- a/CourseWork/app/src/main/res/values/colors.xml
+++ b/CourseWork/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="emoji_view_default_text_color">#EAEAEA</color>
+    <color name="emoji_view_background_color">#1C1C1C</color>
+    <color name="emoji_view_background_selected_color">#3A3A3A</color>
+
+    <color name="message_view_group_username_text_color">#2A9D8F</color>
+    <color name="message_view_group_message_text_color">#FAFAFA</color>
+    <color name="message_view_group_background_color">#1C1C1C</color>
+    <color name="message_view_group_avatar_stroke_color">#A1A1A1</color>
 </resources>
