--- a/CourseWork/app/src/main/res/values/attrs.xml
+++ b/CourseWork/app/src/main/res/values/attrs.xml
@@ -13,5 +13,11 @@
 
     <declare-styleable name="FlexBoxLayout">
         <attr name="maxQuantityOfChildPerRow" format="integer" />
+        <attr name="offsetBetweenElements" format="dimension" />
+    </declare-styleable>
+    <declare-styleable name="MessageViewGroup">
+        <attr name="emojiPadding" format="dimension"/>
+        <attr name="emojiTextSize" format="dimension"/>
+        <attr name="emojiBackground" format="reference"/>
     </declare-styleable>
 </resources>
