--- a/CourseWork/app/src/main/res/drawable/ic_plus_emoji.xml
+++ b/CourseWork/app/src/main/res/drawable/ic_plus_emoji.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="30">
     <path
         android:pathData="M10,0L35,0A10,10 0,0 1,45 10L45,20A10,10 0,0 1,35 30L10,30A10,10 0,0 1,0 20L0,10A10,10 0,0 1,10 0z"
-        android:fillColor="#1C1C1C" />
+        android:fillColor="@color/icon_add_emoji_bg" />
     <path
         android:pathData="M29.662,15.0125C29.662,15.3314 29.4034,15.59 29.0845,15.59H23.425V21.431C23.425,21.7591 23.1591,22.025 22.831,22.025C22.5029,22.025 22.237,21.7591 22.237,21.431V15.59H16.5775C16.2586,15.59 16,15.3314 16,15.0125C16,14.6936 16.2586,14.435 16.5775,14.435H22.237V8.594C22.237,8.2659 22.5029,8 22.831,8C23.1591,8 23.425,8.2659 23.425,8.594V14.435H29.0845C29.4034,14.435 29.662,14.6936 29.662,15.0125Z"
-        android:fillColor="#ffffff" />
+        android:fillColor="@color/icon_add_emoji_plus" />
 </vector>
