--- a/CourseWork/app/src/main/res/values/dimens.xml
+++ b/CourseWork/app/src/main/res/values/dimens.xml
@@ -32,4 +32,46 @@
     <dimen name="date_divider_text_size">14sp</dimen>
     <dimen name="date_divider_padding_vertical">2dp</dimen>
     <dimen name="date_divider_padding_horizontal">20dp</dimen>
+    <dimen name="item_user_margin_top">24dp</dimen>
+    <dimen name="item_user_margin_bottom">0dp</dimen>
+    <dimen name="item_user_margin_left">15dp</dimen>
+    <dimen name="item_user_margin_right">15dp</dimen>
+    <dimen name="item_topic_name_text_size">18sp</dimen>
+    <dimen name="item_topic_name_margin_start">41dp</dimen>
+    <dimen name="item_topic_messagesCount_margin_start">25dp</dimen>
+    <dimen name="item_topic_messagesCount_text_size">16sp</dimen>
+    <dimen name="item_stream_name_margin_start">21dp</dimen>
+    <dimen name="item_stream_name_text_size">18sp</dimen>
+    <dimen name="item_stream_height">63dp</dimen>
+    <dimen name="item_topic_height">41dp</dimen>
+    <dimen name="item_user_height">70dp</dimen>
+    <dimen name="item_user_avatar_size">64dp</dimen>
+    <dimen name="item_user_avatar_margin_start">15dp</dimen>
+    <dimen name="item_user_avatar_margin_end">10dp</dimen>
+    <dimen name="item_user_onlineStatus_margin_top">46dp</dimen>
+    <dimen name="item_user_onlineStatus_margin_start">61dp</dimen>
+    <dimen name="item_user_name_text_size">22sp</dimen>
+    <dimen name="item_user_email_text_size">16sp</dimen>
+    <dimen name="fragment_profile_avatar_size">185dp</dimen>
+    <dimen name="fragment_profile_avatar_margin_top">126dp</dimen>
+    <dimen name="fragment_profile_name_margin_top">16dp</dimen>
+    <dimen name="fragment_profile_name_padding_horizontal">30dp</dimen>
+    <dimen name="fragment_profile_name_text_size">32sp</dimen>
+    <dimen name="fragment_profile_status_text_size">20sp</dimen>
+    <dimen name="fragment_profile_onlineStatus_margin_start">21dp</dimen>
+    <dimen name="fragment_profile_onlineStatus_text_size">16sp</dimen>
+    <dimen name="fragment_profile_logOut_width">184dp</dimen>
+    <dimen name="fragment_profile_logOut_height">52dp</dimen>
+    <dimen name="fragment_profile_logOut_margin_bottom">65dp</dimen>
+    <dimen name="fragment_profile_logOut_text_size">20sp</dimen>
+    <dimen name="fragment_people_tool_bar_height">56dp</dimen>
+    <dimen name="fragment_people_searchInput_margin_start">2dp</dimen>
+    <dimen name="fragment_people_searchInput_padding_start">20dp</dimen>
+    <dimen name="fragment_people_searchInput_text_size">24sp</dimen>
+    <dimen name="fragment_searches_margin_top">15dp</dimen>
+    <dimen name="fragment_searches_searchInput_margin_start">2dp</dimen>
+    <dimen name="fragment_searches_searchInput_padding_start">20dp</dimen>
+    <dimen name="fragment_searches_searchInput_text_size">24sp</dimen>
+    <dimen name="fragment_container_streams_tabLayout_margin_top">15dp</dimen>
+    <dimen name="chat_topic_text_size">18sp</dimen>
 </resources>
