--- a/CourseWork/app/src/main/res/layout/fragment_container_streams.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_container_streams.xml
@@ -60,7 +60,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/fragment_container_streams_viewpager_streams"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constrainedHeight="true"
