--- a/CourseWork/app/src/main/res/layout/fragment_people.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_people.xml
@@ -42,7 +42,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_people_rv_people"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
