--- a/CourseWork/app/src/main/res/layout/fragment_people.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_people.xml
@@ -41,6 +41,28 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/people_shimmer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:shimmer_duration="800"
+        android:visibility="gone">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+            <include layout="@layout/shimmer_item_user"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
