--- a/CourseWork/app/src/main/res/layout/fragment_profile.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/profile_shimmer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/fragment_profile_avatar_margin_top"
+        tools:visibility="gone"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <View
+                android:layout_width="@dimen/fragment_profile_avatar_size"
+                android:layout_height="@dimen/fragment_profile_avatar_size"
+                android:background="@color/shimmer_background"/>
+            <View
+                android:layout_width="@dimen/shimmer_profile_text_width"
+                android:layout_height="@dimen/shimmer_profile_text_height"
+                android:layout_marginTop="@dimen/fragment_profile_name_margin_top"
+                android:background="@color/shimmer_background"
+                />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <ImageView
         android:id="@+id/fragment_profile_avatar"
         android:layout_width="@dimen/fragment_profile_avatar_size"
