--- a/CourseWork/app/src/main/res/layout/fragment_specific_streams.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_specific_streams.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:id="@+id/rv_specific_streams"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:listitem="@layout/item_stream" />
+    android:orientation="vertical">
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/stream_shimmer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+            <include layout="@layout/shimmer_item_stream"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:orientation="vertical"
+        android:id="@+id/rv_specific_streams"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_stream" />
+</LinearLayout>
