--- a/CourseWork/app/src/main/res/layout/activity_chat.xml
+++ b/CourseWork/app/src/main/res/layout/activity_chat.xml
@@ -97,5 +97,13 @@
             android:layout_marginEnd="@dimen/chat_btn_action_margin_end"
             android:src="@drawable/ic_add_files"
             android:layout_gravity="center" />
+        <ProgressBar
+            android:id="@+id/chat_input_loading_indicator"
+            android:layout_width="@dimen/chat_input_loading_indicator_size"
+            android:layout_height="@dimen/chat_input_loading_indicator_size"
+            android:layout_marginEnd="@dimen/chat_btn_action_margin_end"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
