--- a/CourseWork/app/src/main/res/layout/activity_chat.xml
+++ b/CourseWork/app/src/main/res/layout/activity_chat.xml
@@ -35,19 +35,28 @@
         android:orientation="vertical"
         app:shimmer_duration="800"
         android:visibility="gone">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layoutDirection="ltr">
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
-            <include layout="@layout/shimmer_item_message"/>
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
+
+            <include layout="@layout/shimmer_item_message" />
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -61,7 +70,7 @@
         android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:visibility="visible"
-        tools:listitem="@layout/item_message"/>
+        tools:listitem="@layout/item_message" />
 
     <LinearLayout
         android:id="@+id/chat_input_container"
@@ -97,13 +106,13 @@
             android:layout_marginEnd="@dimen/chat_btn_action_margin_end"
             android:src="@drawable/ic_add_files"
             android:layout_gravity="center" />
+
         <ProgressBar
             android:id="@+id/chat_input_loading_indicator"
             android:layout_width="@dimen/chat_input_loading_indicator_size"
             android:layout_height="@dimen/chat_input_loading_indicator_size"
             android:layout_marginEnd="@dimen/chat_btn_action_margin_end"
             android:layout_gravity="center"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
