--- a/CourseWork/app/src/main/res/layout/fragment_specific_streams.xml
+++ b/CourseWork/app/src/main/res/layout/fragment_specific_streams.xml
@@ -10,20 +10,28 @@
         android:id="@+id/stream_shimmer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
-            <include layout="@layout/shimmer_item_stream"/>
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
+
+            <include layout="@layout/shimmer_item_stream" />
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
 
