--- a/CourseWork/app/src/main/res/layout/shimmer_item_stream.xml
+++ b/CourseWork/app/src/main/res/layout/shimmer_item_stream.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<View
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_stream_height"
     android:layout_marginBottom="@dimen/shimmer_item_stream_margin_bottom"
-    android:background="@color/shimmer_background"
-    />
+    android:background="@color/shimmer_background" />
