--- a/CourseWork/app/src/main/res/layout/shimmer_item_user.xml
+++ b/CourseWork/app/src/main/res/layout/shimmer_item_user.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -11,12 +10,11 @@
         android:layout_height="@dimen/item_user_avatar_size"
         android:layout_marginStart="@dimen/item_user_avatar_margin_start"
         android:layout_marginEnd="@dimen/item_user_avatar_margin_end"
-        android:background="@drawable/shimmer_round_avatar"
-        />
+        android:background="@drawable/shimmer_round_avatar" />
 
     <View
         android:layout_width="@dimen/shimmer_item_user_text_width"
         android:layout_height="@dimen/item_user_avatar_size"
-        android:background="@color/shimmer_background"/>
+        android:background="@color/shimmer_background" />
 
 </LinearLayout>
