--- a/CourseWork/app/src/main/res/layout/item_stream.xml
+++ b/CourseWork/app/src/main/res/layout/item_stream.xml
@@ -23,6 +23,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="2"
-        android:src="@drawable/ic_expand_arrow" />
+        android:src="@drawable/ic_expand_arrow"/>
+
+    <ProgressBar
+        android:id="@+id/item_stream_loading_indicator"
+        android:layout_width="@dimen/item_stream_loading_indicator_size"
+        android:layout_height="@dimen/item_stream_loading_indicator_size"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:visibility="gone"
+        />
 
 </LinearLayout>
