--- a/CourseWork/app/src/main/res/layout/item_stream.xml
+++ b/CourseWork/app/src/main/res/layout/item_stream.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="2"
-        android:src="@drawable/ic_expand_arrow"/>
+        android:src="@drawable/ic_expand_arrow" />
 
     <ProgressBar
         android:id="@+id/item_stream_loading_indicator"
@@ -31,7 +31,6 @@
         android:layout_height="@dimen/item_stream_loading_indicator_size"
         android:layout_gravity="center"
         android:layout_weight="2"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
 </LinearLayout>
