Add new resources

--- a/CourseWork/app/src/main/res/values/colors.xml
+++ b/CourseWork/app/src/main/res/values/colors.xml
@@ -65,4 +65,6 @@
     <color name="icon_add_emoji_bg">#DDDDDD</color>
     <color name="icon_add_emoji_plus">#000000</color>
 
+    <color name="text_hyperlink_color">#0000FF</color>
+
 </resources>
