--- a/CourseWork/app/src/main/res/values/colors.xml
+++ b/CourseWork/app/src/main/res/values/colors.xml
@@ -66,5 +66,6 @@
     <color name="icon_add_emoji_plus">#000000</color>
 
     <color name="text_hyperlink_color">#0000FF</color>
+    <color name="fragment_create_manager_input_text">#000000</color>
 
 </resources>
