--- a/CourseWork/app/src/main/res/values-night/colors.xml
+++ b/CourseWork/app/src/main/res/values-night/colors.xml
@@ -16,6 +16,7 @@
     <color name="emoji_view_background_selected_color">#3A3A3A</color>
 
     <color name="message_view_group_username_text_color">#2A9D8F</color>
+    <color name="message_view_group_topic_name_text_color">#3CD8C5</color>
     <color name="message_view_group_message_text_color">#FAFAFA</color>
     <color name="message_view_group_background_color">#1C1C1C</color>
     <color name="message_view_group_avatar_stroke_color">#A1A1A1</color>
